ShelvesResource uses Document API to output text